--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.github.codemumbler</groupId>
-	<artifactId>preferences</artifactId>
+	<artifactId>cloak-db</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.11.1.1</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -24,8 +29,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
