--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derby</artifactId>
-			<version>10.11.1.1</version>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
