--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.codemumbler</groupId>
 	<artifactId>cloak-db</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>
 		Manages JNDI and an in memory db so you can concentrate on writing quick, clean DataSource unit tests.
@@ -29,7 +29,7 @@
 		<connection>scm:git:https://github.com/codemumbler/cloak-db.git</connection>
 		<developerConnection>scm:git:https://github.com/codemumbler/cloak-db.git</developerConnection>
 		<url>https://github.com/codemumbler/cloak-db.git</url>
-	  <tag>cloak-db-1.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<distributionManagement>
 		<snapshotRepository>
