--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.codemumbler</groupId>
 	<artifactId>cloak-db</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	<name>Cloak-db</name>
 	<description>
 		Manages JNDI and an in memory db so you can concentrate on writing quick, clean DataSource unit tests.
 	</description>
@@ -29,8 +30,7 @@
 		<connection>scm:git:https://github.com/codemumbler/cloak-db.git</connection>
 		<developerConnection>scm:git:https://github.com/codemumbler/cloak-db.git</developerConnection>
 		<url>https://github.com/codemumbler/cloak-db.git</url>
-	  <tag>HEAD</tag>
-  </scm>
+  	</scm>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
