--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.codemumbler</groupId>
 	<artifactId>cloak-db</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 	<name>Cloak-db</name>
 	<description>
@@ -30,7 +30,8 @@
 		<connection>scm:git:https://github.com/codemumbler/cloak-db.git</connection>
 		<developerConnection>scm:git:https://github.com/codemumbler/cloak-db.git</developerConnection>
 		<url>https://github.com/codemumbler/cloak-db.git</url>
-  	</scm>
+  	  <tag>cloak-db-1.0</tag>
+  </scm>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
