--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.codemumbler</groupId>
 	<artifactId>cloak-db</artifactId>
@@ -30,8 +31,7 @@
 		<connection>scm:git:https://github.com/codemumbler/cloak-db.git</connection>
 		<developerConnection>scm:git:https://github.com/codemumbler/cloak-db.git</developerConnection>
 		<url>https://github.com/codemumbler/cloak-db.git</url>
-  	  <tag>HEAD</tag>
-  </scm>
+	</scm>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
